--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
     "scripts": {
       "test": "echo \"Error: no test specified\" && exit 1"
     },
+    "devDependencies": {
+      "socket.io": "2.2.0",
+      "express": "4.17.1"
+    },
     "repository": {
       "type": "git",
       "url": "https://github.com/lockness-Ko/Crypt0.git"
